--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "2.4.3",
     "jade": "0.27.2",
     "daemonize2": "0.4.0-rc.5",
-    "winston": "0.6.2"
+    "winston": "0.6.2",
+    "kexec": "latest"
   },
   "engines": {
     "node": "0.8.2",
