got facebook login working partway…

--- a/src/config.json
+++ b/src/config.json
@@ -4,6 +4,7 @@
 		"secure": (function() { if (process.env.PORT) return 443; else return 3000+1; })()
 	},
 	"facebook": {
-		"shared_secret": process.env.FACEBOOK_SECRET
+		"shared_secret": process.env.FACEBOOK_APP_KEY,
+		"id": (function() { return process.env.FACEBOOK_APP_ID || 371900149592754; })()
 	}
 }
