--- a/apps/Makefile
+++ b/apps/Makefile
@@ -1,6 +1,11 @@
-tgt = $(patsubst %.coffee,build/%.min.js,$(wildcard ./**/*.coffee))
+tgt = $(patsubst %.coffee,build/%.min.js,$(wildcard **/*.coffee))
+tgt += $(patsubst %.hbs,build/%.hbjs,$(wildcard **/*.hbs))
+tgt += $(patsubst %.png,build/%.png,$(wildcard **/*.png))
+tgt += $(patsubst %.jpg,build/%.jpg,$(wildcard **/*.jpg))
 
-all: node_modules $(tgt)
+pub = ../public/javascripts
+
+all: node_modules $(tgt) $(pub)/handlebars.runtime.js $(pub)/underscore-min.js $(pub)/backbone-min.js
 
 .PHONY: clean all 
 
@@ -16,3 +21,21 @@ build/%.js: %.coffee
 
 build/%.min.js: build/%.js
 	node_modules/uglify-js/bin/uglifyjs -o $@ $<
+
+build/%.hbjs: %.hbs
+	node_modules/handlebars/bin/handlebars -m $< -f $@
+
+build/%.png: %.png
+	cp -f $< $@
+
+build/%.jpg: %.jpg
+	cp -f $< $@
+
+$(pub)/handlebars.runtime.js: node_modules/handlebars/lib/handlebars/runtime.js
+	cp -f $< $@
+
+$(pub)/underscore-min.js: node_modules/backbone/node_modules/underscore/underscore-min.js
+	cp -f $< $@
+
+$(pub)/backbone-min.js: node_modules/backbone/backbone-min.js
+	cp -f $< $@
