--- a/apps/package.json
+++ b/apps/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "uglify-js": "latest"  
+    "uglify-js": "latest",
+    "handlebars": "latest",
+    "backbone": "latest"  
   },
   "engines": {
     "node": "0.8.2",
