removing public directory from revision control

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -3,9 +3,11 @@ tgt += $(patsubst %.hbs,build/%.hbjs,$(wildcard **/*.hbs))
 tgt += $(patsubst %.png,build/%.png,$(wildcard **/*.png))
 tgt += $(patsubst %.jpg,build/%.jpg,$(wildcard **/*.jpg))
 
-pub = ../public/javascripts
+pub = ../public/js
 
-all: node_modules $(tgt) $(pub)/handlebars.runtime.js $(pub)/underscore-min.js $(pub)/backbone-min.js
+clt_js = $(pub)/handlebars.runtime.js $(pub)/underscore-min.js $(pub)/backbone-min.js
+
+all: node_modules $(tgt) $(clt_js)
 
 .PHONY: clean all 
 
@@ -14,7 +16,7 @@ node_modules: package.json
 	npm install
 
 clean: 
-	-rm -rf build
+	-rm -rf build ../public
 
 build/%.js: %.coffee
 	coffee -o $(dir $@) $<
@@ -31,11 +33,15 @@ build/%.png: %.png
 build/%.jpg: %.jpg
 	cp -f $< $@
 
-$(pub)/handlebars.runtime.js: node_modules/handlebars/lib/handlebars/runtime.js
+../public: 
+	mkdir -p ../public
+	cp -Rf ../initializr/* ../public
+
+$(pub)/handlebars.runtime.js: node_modules/handlebars/lib/handlebars/runtime.js ../public 
 	cp -f $< $@
 
-$(pub)/underscore-min.js: node_modules/backbone/node_modules/underscore/underscore-min.js
+$(pub)/underscore-min.js: node_modules/backbone/node_modules/underscore/underscore-min.js ../public 
 	cp -f $< $@
 
-$(pub)/backbone-min.js: node_modules/backbone/backbone-min.js
+$(pub)/backbone-min.js: node_modules/backbone/backbone-min.js ../public 
 	cp -f $< $@
