public is removed from version control

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,4 @@ apps/build
 
 apps/node_modules
 
-public/javascripts/backbone-min.js
-
-public/javascripts/handlebars.runtime.js
-
-public/javascripts/underscore-min.js
+public/*
