--- a/server/src/config.json
+++ b/server/src/config.json
@@ -6,5 +6,8 @@
   "facebook": {
     "shared_secret": process.env.FACEBOOK_APP_KEY,
     "id": (function() { return process.env.FACEBOOK_APP_ID || 371900149592754; })()
+  },
+  "mongodb": {
+    "connection": (function() { return process.env.MONGO_CONNECT || "mongodb://localhost/mydb"; })()
   }
 }
